# clash-verge-service

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
.github/: renovate.json
.github/build-for-linux/: Dockerfile  action.yml
.github/workflows/: alpha.yml  old-release.yml  pr-check.yml  pre.yml  release.yml
examples/: client.rs  server.rs
examples/mihomo/: test.yaml
src/: auth.rs  crypto.rs  install.rs  io.github.clashverge.helper.plist  ipc.rs  lib.rs  main.rs  process_identity.rs  runtime.rs  systemd_service_unit.tmpl  uninstall.rs  utils.rs
src/log_config/: mod.rs
src/service/: data.rs  handle.rs  logger.rs  mod.rs  web.rs
tmpl/: io.github.clashvergeself.helper.plist  systemd_service_unit.tmpl
