[package]
name = "clash-verge-service"
version = "1.1.2"
edition = "2024"
authors = ["zzzgydi", "Clash Verge Rev Team", "oomeow"]
license = "GPL-3.0"
repository = "https://github.com/oomeow/clash-verge-service.git"

[[bin]]
name = "clash-verge-service"
path = "src/main.rs"


[dependencies]
anyhow = "1.0"
log = "0.4"
log4rs = "1.3"
once_cell = "1.19"
serde_json = "1.0"
parking_lot = "0.12"
tokio = { version = "1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "io-util",
    "sync",
] }
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.37"
shared_child = "1.1"
regex = "1.10"
tipsy = "0.6"
chrono = {version = "0.4",features = ["serde"]}
clap = { version = "4.5.47", features = ["derive"] }

bytes = "1.10.1"
chacha20poly1305 = "0.10.1"
hkdf = "0.12.4"
tokio-util = { version = "0.7.16", features = ["codec"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
sha2 = "0.10.9"
futures = "0.3.31"

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-service = "0.8"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
