[package]
name = "clash-verge-self-service"
version = "2.1.0"
edition = "2024"
authors = ["zzzgydi", "Clash Verge Rev Team", "oomeow"]
license = "GPL-3.0"
repository = "https://github.com/oomeow/clash-verge-self-service.git"

[dependencies]
anyhow = "1.0"
log = "0.4"
log4rs = "1.3"
once_cell = "1.19"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "io-util",
    "sync",
    "signal",
    "net",
    "time"
] }
chrono = {version = "0.4",features = ["serde"]}
clap = { version = "4.5", features = ["derive"] }

bytes = "1.10"
chacha20poly1305 = "0.10"
hkdf = "0.12"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
sha2 = "0.10"
keyring = { version = "3.6", default-features = false, features = ["apple-native", "windows-native", "sync-secret-service"] }
libc = "0.2"

process_supervisor = { git = "https://github.com/oomeow/clash-verge-self", package = "process_supervisor" }
clash-verge-self-utils = { git = "https://github.com/oomeow/clash-verge-self", package = "clash-verge-self-utils" }

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-service = "0.8"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
    "Win32_System_Threading",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
